navbar fix and hero update with logo

--- a/client/src/components/Hero/style.css
+++ b/client/src/components/Hero/style.css
@@ -1,10 +1,20 @@
 section.hero {
-    /* background-image: url(./portartbackground.png); */
-    width: auto;
-    height: 32rem;
-    background-size: cover;
-    animation-duration: 4s;
-    background-repeat: no-repeat;
-    margin:0;
-  
-  }
+  /* background-image: url(./portartbackground.png); */
+  width: auto;
+  height: 32rem;
+  background-size: cover;
+  animation-duration: 4s;
+  background-repeat: no-repeat;
+  margin: 0;
+}
+
+button.btn.btn-primary {
+  background-color: #2b3942;
+  margin-top: 38%;
+  width: 11%;
+  height: 10%;
+  border-radius: 15px;
+  color: #fff;
+  font-family: "Montserrat", sans-serif;
+  position: fixed;
+}
