--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -69,7 +69,8 @@
     font-family: "Montserrat", sans-serif;
     float: right;
     position: absolute;
-    right: 0px;
+    right: 4px;
+    margin-right: 3%;
     /* width: 300px; */
   }
   
@@ -86,3 +87,31 @@
     font-family: 'Alegreya', serif;
     font-size: 30px;
   }
+
+  div.mr-auto.navbar-nav {
+    margin-right: 10%;
+  }
+
+  div.dropdown-menu.show {
+
+    color: #fff;
+    font-family: "Montserrat", sans-serif;
+    background-color: #2b3942;
+    margin-right: 5%;
+  }
+
+  .btn.btn-outline-success{
+    background-color: white;
+    color: #2b3942;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  a.dropdown-item{
+    color: #fff;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  div.dropdown-menu.show{
+    margin-right: 10%;
+  }
+  
