--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,11 +1,10 @@
 .footer {
     position: fixed;
-
     width: 100%;
     bottom: 0;
     left: 0;
     right: 0;
-    padding: 3px;
+    padding: 0;
     text-align: center;
     align-items: center;
     justify-content: center;
