--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -4,10 +4,11 @@ img {
     overflow: "hidden"
 }
 
-.rightimage{
+/* .rightimage{
     text-align: right;
     margin-right: 4%;
     font-family: "Montserrat", sans-serif;
+    display: inline;
 }
 
 .leftimage {
@@ -15,19 +16,23 @@ img {
     margin-left: 2%;
     margin-right: 0;
     font-family: "Montserrat", sans-serif;
-}
+    display: inline;
+} */
 
 
 p{
     font-family: "Montserrat", sans-serif;
     font-size: larger;
+    display: inline;
 }
 
-.homeTitle2 {
+/* .homeTitle2 {
     text-align: left;
+    display: inline-block;
 }
 
 .homeTitle1{
     text-align: right;
-}
+    display: inline-block;
+} */
 
