--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -1,12 +1,38 @@
 .footer {
-    position: fixed;
+    /* position: fixed;
     width: 100%;
     bottom: 0;
     left: 0;
-    right: 0;
-    padding: 0;
-    text-align: center;
+    right: 0; */
+    /* padding: 0; */
+    /* text-align: center;
     align-items: center;
-    justify-content: center;  
-    background-color: aquamarine;
+    justify-content: center;   */
+    background-color: #2b3942;
+    color: white;
+    margin-top:auto;
+    padding-bottom: 10px;
+    display: block;
+    
+}
+
+.footerCol1{
+   float:left;
+   background-color : #2b3942;
+   width: 100%;
+
+
+}
+
+.footerContact{
+    justify-content: center ;
+    color: white; 
+    background-color : #2b3942;
+
+    /* width: 100%; 
+    height: 100%; */
+}
+
+.footerLink {
+    color: white;
 }
