--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -4,35 +4,72 @@ img {
     overflow: "hidden"
 }
 
-/* .rightimage{
+img.rightimage{
     text-align: right;
     margin-right: 4%;
     font-family: "Montserrat", sans-serif;
     display: inline;
+    max-width: 600px;
+    max-height: 600px;
+    overflow: "hidden"
 }
 
-.leftimage {
+img.leftimage {
     text-align: left;
     margin-left: 2%;
     margin-right: 0;
     font-family: "Montserrat", sans-serif;
     display: inline;
-} */
+    max-width: 600px;
+    max-height: 600px;
+    overflow: "hidden"
+}
 
 
 p{
     font-family: "Montserrat", sans-serif;
     font-size: larger;
+    /* display: inline; */
+    margin: 0;
+}
+
+.homeTitle2 .about{
+    text-align: left;
     display: inline;
 }
 
-/* .homeTitle2 {
-    text-align: left;
-    display: inline-block;
+.homeTitle1, .text{
+    text-align: right;
+    display: inline-flexbox;
 }
 
-.homeTitle1{
-    text-align: right;
+h1{
+    font-family: 'Alegreya', serif;
+}
+
+/* div.row{
     display: inline-block;
+    width: 1200px;
 } */
+
+/* div#about.about.container{
+    display: inline-flexbox;
+}
+
+div.col-lg-4{
+    width: 500px;
+    margin: 0;
+    display: inline-flexbox;
+}
+
+div{
+    display: inline-flexbox;
+}
+
+div.col-lg-8{
+    display: inline-flexbox;
+    width: 800px;
+} */
+
+
 
