--- a/client/src/pages/css/signup.css
+++ b/client/src/pages/css/signup.css
@@ -1,4 +1,4 @@
-h1 {
+/* h1 {
     text-align: center;
     font-family: 'Alegreya', serif;
     margin-top: 5%;
@@ -8,4 +8,4 @@ h1 {
 p{
     font-family: "Montserrat", sans-serif;
     font-size: larger;
-}
+} */
