--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -5,14 +5,14 @@ img {
 }
 
 .rightimage{
-    margin-right: 4%;
+    margin-right: 0;
     font-family: "Montserrat", sans-serif;
     /* display: inline; */
     float: right;
 }
 
 .leftimage {
-    margin-left: 4%;
+    margin-left: 0;
     font-family: "Montserrat", sans-serif;
     /* display: inline; */
     float:left;
@@ -43,6 +43,10 @@ h1{
     width: 1200px;
 } */
 
+/* div#meditation.meditation.container{
+    background-color: #d6e4dc;
+} */
+
 .meditation ,.dashboard, .homeTitle1 {
 margin-left: 4%;
 text-align: right;
@@ -58,7 +62,7 @@ font-family: "Montserrat", sans-serif;
     text-align: left;
     display: grid;
     font-family: "Montserrat", sans-serif;
-
+   
     /* grid-template-columns: repeat(2, 1fr) */
     
 }
@@ -72,7 +76,7 @@ font-family: "Montserrat", sans-serif;
     margin-top: 15vh;
 } */
 
-.homeTitle2Button{
+a.homeTitle2Button{
     margin-right: 4%;
     text-align: left;
     display: grid;
@@ -82,18 +86,56 @@ font-family: "Montserrat", sans-serif;
     color: white;
     border-radius: 50px;
     text-decoration: none;
-    font-size: 18px;
+    
     font-family: "Montserrat", sans-serif;    
+    margin-top: 0;
+    font-size: 25px;
+    padding: 1rem;
+    
 }
 
-.homeTitle2Button:hover{
+
+/* .button is for the righ aligned buttons. */
+.button1{
+    /* margin-right: 4%;
+    text-align: left;
+    display: grid;
+    background-color: #2b3942;
+    width: 12%;
+    height: 4%; */
+    /* justify-content: center;
+    color: white;
+    border-radius: 50px;
+    text-decoration: none;
+    font-size: 60px;
+    font-family: "Montserrat", sans-serif;     */
+    margin-top: 0;
+    position: absolute;
+    margin-left: 80%;
+}
+
+.button1:hover{
     transition: all 0.2s ease-in-out;
     font-family: "Montserrat", sans-serif;
     color: #b6d5db;
     border-radius : 50px;
     font-size: 18px;
 }
-.homeTitle1Button{
+
+.button2{
+    width: 70%;
+    height: 20%;
+}
+
+a.homeTitle2Button:hover{
+    transition: all 0.2s ease-in-out;
+    font-family: "Montserrat", sans-serif;
+    color: #b6d5db;
+    border-radius : 50px;
+    font-size: 18px;
+}
+
+a.homeTitle1Button{
     margin-left: 4%;
     text-align: right;
     display: grid;
@@ -101,9 +143,10 @@ font-family: "Montserrat", sans-serif;
     background-color: #2b3942;
     border-radius: 50px;
     justify-content: right;
-    width: 18%;
+    width: 120%;
     color: white;
-
+    font-size: 25px;
+    padding: 1rem;
     justify-content: center;
 
     text-decoration: none;
@@ -111,11 +154,18 @@ font-family: "Montserrat", sans-serif;
 
 }
 
-.homeTitle1Button:hover{
+a.homeTitle1Button:hover{
     transition: all 0.2s ease-in-out;
     font-family: "Montserrat", sans-serif;
     color: #b6d5db;
     border-radius : 50px;
     font-size: 18px;
 } 
+
+button.btn.btn-primary.a {
+    background-color: #2b3942;
+    margin-top: 0;
+    position: relative;
+    display: grid;
+}
 
