working on hiding elements for sidebar when in Signin portion

--- a/client/src/components/Navbar/style.css
+++ b/client/src/components/Navbar/style.css
@@ -1,35 +1,35 @@
-.navbar {
+/* .navbar {
     background-color: #2b3942;
     color: #fff;
-    position: sticky;
+    position: sticky; */
     /* position: fixed;
         width: 100%;
         top: 0; */
-  }
-  
+  /* }
+   */
   /* .mr-auto{
       color: white;
      } */
   
-  button .navbar-toggler {
+  /* button .navbar-toggler {
     color: white;
-  }
+  } */
   
   /* .navbar-light.brand {
       color: white;
       font-family: 'Rock Salt', cursive;
     } */
   
-  .navbar-light .navbar-brand {
+  /* .navbar-light .navbar-brand {
     color: white;
     font-family: 'Alegreya', serif;
-  }
+  } */
   
-  #basic-navbar-nav {
+  /* #basic-navbar-nav {
     color: white;
-  }
+  } */
   
-  .navbar-toggler {
+  /* .navbar-toggler {
     color: white;
   }
   
@@ -46,7 +46,7 @@
   .sticky + .sectionSpacing {
     padding-top: 60px;
     height: 50%;
-  }
+  } */
   
   /* a{
       background-color: #0D2E5B;
@@ -54,7 +54,7 @@
       text-align: center;
   } */
   
-  .nav-item .nav-link {
+  /* .nav-item .nav-link {
     background-color: #2b3942;
     color: white;
     text-align: center;
@@ -72,7 +72,7 @@
     right: 4px;
     margin-right: 3%;
     /* width: 300px; */
-  }
+  /* }
   
   .nav-item .nav-link {
     color: #fff;
@@ -114,4 +114,4 @@
   div.dropdown-menu.show{
     margin-right: 10%;
   }
-  
+    */
