--- a/client/src/pages/css/signup.css
+++ b/client/src/pages/css/signup.css
@@ -9,3 +9,17 @@ p{
     font-family: "Montserrat", sans-serif;
     font-size: larger;
 } */
+
+
+
+.signupboxForm{
+  margin-top: 10px;
+  flex: 1;
+  justify-content: center;
+  align-items: center;
+  background-color:#b6d5db;
+  flex-direction: column;
+  width: 90%;
+  height: 40%;
+  padding: 20px;
+}
