--- a/client/src/pages/css/blog.css
+++ b/client/src/pages/css/blog.css
@@ -1,11 +1,22 @@
-/* h1 {
+h1.blogTitle {
     text-align: center;
     font-family: 'Alegreya', serif;
     margin-top: 5%;
     margin-bottom: 3%;
   }
 
-p{
+  button.newPostBtn.btn.btn-primary{
+    background-color: #2b3942;
+    font-family: "Montserrat", sans-serif;  
+    position: relative;
+    top:50%;
+    right: 0;
+    transform: translateY(-50%);
+    
+  }
+
+ 
+/* p{
     font-family: "Montserrat", sans-serif;
     font-size: larger;
 } */
