adding css to music player and working on videos

--- a/client/src/components/MedCarousel/style.css
+++ b/client/src/components/MedCarousel/style.css
@@ -1,3 +1,13 @@
 .carousel{
     background-color: blueviolet;
+    height: 500px;
+    color: blueviolet;
+}
+
+div.carousel-item {
+    background-color: blueviolet;
+    /* height: 500px; */
+    color: blueviolet;
+
+
 }
