Dashboard functionality complete. MVP is working

--- a/client/src/components/Charts/style.css
+++ b/client/src/components/Charts/style.css
@@ -8,3 +8,17 @@
 /* .rowChart2{
     border: solid #2b3942;
 } */
+
+.Chart2 {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: solid #2b3942;
+}
+
+.Chart1{
+
+    margin-top: 5px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: solid #2b3942;
+}
