--- a/client/src/pages/css/dashboard.css
+++ b/client/src/pages/css/dashboard.css
@@ -10,3 +10,10 @@ p{
     font-size: larger;
 } */
 
+.dashboardTitle {
+
+  text-align: center;
+  margin-top: 40px;
+  margin-bottom: 40px;
+  font-size: 40px;
+}
