--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -34,11 +34,16 @@
     justify-content: center ;
     color: white; 
     background-color : #2b3942;
-
+    margin-top: 5%;
+    margin-bottom: 5%;
     /* width: 100%; 
     height: 100%; */
 }
 
 .footerLink {
     color: white;
+}
+
+button.contactBtn.btn.btn-primary{
+    background-color: #d2807d;
 }
