--- a/client/src/components/MedCarousel/style.css
+++ b/client/src/components/MedCarousel/style.css
@@ -1,13 +1,61 @@
-.carousel{
-    background-color: blueviolet;
+.carousel-inner{
+    background-color: #45535c;
     /* height: 500px; */
     color: white;
+    align-content: center;
+    height: 55rem;
+    width: 90rem;
+    font-family: "Montserrat", sans-serif; 
 }
 
 div.carousel-item {
-    background-color: blueviolet;
+    background-color: #45535c;
     /* height: 500px; */
     color:white;
+    align-content: center;
+    margin: 0 auto;
+    
+}
 
+div.ytp-cued-thumbnail-overlay-image {
+    align-content: center;
+}
+
+div.carousel-caption {
+    position: relative;
+    left: 0;
+    top: 0;
 
 }
+
+.textMed {
+    font-family: "Montserrat", sans-serif; 
+    font-size: 15px;
+    margin-top: 2%;
+}
+
+.video-responsive {
+    overflow: hidden;
+    padding-bottom: 56.25%;
+    position: relative;
+    height: 0;
+  }
+
+  iframe {
+    margin: 20px 20px auto 165px;
+    text-align: center;
+  }
+  
+  /* .video-responsive iframe {
+    left: 20;
+    height: 65%;
+    width: 65%;
+    align-content: center;
+    position: absolute;
+    vertical-align: middle;
+  } */
+
+  ol.carousel-indicators {
+      align-items: center;
+      margin-left: 185px;
+  }
