--- a/client/src/pages/css/blog.css
+++ b/client/src/pages/css/blog.css
@@ -1,8 +1,15 @@
-h1.blogTitle {
+.blogTitle {
     text-align: center;
     font-family: 'Alegreya', serif;
     margin-top: 5%;
-    margin-bottom: 3%;
+    margin-bottom: 1%;
+    color:  #2b3942
+  }
+  .blogDescription {
+    text-align: center;
+    font-family: "Montserrat", sans-serif;
+    color:  #2b3942;
+    margin-bottom: 4%;
   }
 
   button.newPostBtn.btn.btn-primary{
