--- a/client/src/components/Yoga/style.css
+++ b/client/src/components/Yoga/style.css
@@ -1,32 +1,41 @@
+
+
 .dropdown-menu {
     max-height: 300px;
     overflow-y: auto;
     font-family: "Montserrat", sans-serif;  
     background-color: #45535c;
     
+    
   }
 
 button#size-dropdown.dropdown-menu.dropdown-toggle.btn.btn-primary {
   font-family: "Montserrat", sans-serif;  
   background-color: #45535c;
+  
 }
 
 .dropdown-toggle.btn.btn-primary {
   font-family: "Montserrat", sans-serif;  
   background-color: #45535c;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
 
 }
 
 .btn .btn-primary{
   font-family: "Montserrat", sans-serif;  
   background-color: #45535c;
+  
 }
 
 .dropdown-toggle {
   font-family: "Montserrat", sans-serif;  
   background-color: #45535c;
   margin-left: 40%;
-  width: 30%;
+  width: 70%;
   height: 40%;
   font-size: 15px;
   margin-top: 5%;
@@ -38,8 +47,8 @@ button#size-dropdown.dropdown-menu.dropdown-toggle.btn.btn-primary {
     /* height: 500px; */
     color: white;
     align-content: center;
-    height: 40rem;
-    width: 110rem;
+    height:50rem;
+    /* width: 110rem; */
     margin: 0 auto;
     font-family: "Montserrat", sans-serif; 
 }
@@ -53,10 +62,9 @@ button#size-dropdown.dropdown-menu.dropdown-toggle.btn.btn-primary {
 
 .yogaCaro {
 
-  margin: 20px 20px auto 260px;
+  margin: 140px 10px auto 118px;
   text-align: center;
-}
-/* 
-.yogaJumbo {
 
-} */
+}
+
+
