--- a/client/src/components/NewPostCard/style.css
+++ b/client/src/components/NewPostCard/style.css
@@ -10,3 +10,15 @@
   } */
 
 
+
+
+  .newTitle{
+
+  color: #2b3942;
+  font-size: smaller;
+  }
+
+  .newpostBtn{
+
+    background-color: #2b3942;
+  }
