--- a/client/src/pages/css/home.css
+++ b/client/src/pages/css/home.css
@@ -321,6 +321,133 @@ display: block;
         
             
         }
-
+        a.homeTitle1Button:hover{
+            transition: all 0.2s ease-in-out;
+            font-family: "Montserrat", sans-serif;
+            color: #b6d5db;
+            border-radius : 50px;
+            font-size: 16px;
+            text-decoration: none;
+        
+        } 
 
 }
+
+
+@media screen and (max-width : 414px){
+ 
+    .rightimage{
+        margin-right: 1%;
+        font-family: "Montserrat", sans-serif;
+        /* display: inline; */
+        float: right;
+        max-width: 200px;
+        max-height: 200px;
+        overflow:auto
+        
+    }
+    .leftimage {
+        margin-left: 2%;
+        font-family: "Montserrat", sans-serif;
+        /* display: inline; */
+        float:left;
+        max-width: 200px;
+        max-height: 200px;
+        overflow:auto
+    }
+    p{
+        font-family: "Montserrat", sans-serif;
+        font-size: medium;
+    }
+
+
+    .meditation ,.dashboard, .homeTitle1 {
+        margin-left: 4%;
+        text-align: right;
+        display: grid;
+        font-family: "Montserrat", sans-serif;
+        margin-top: 30px;
+        
+        /* grid-template-columns: (2, 1fr) */
+        
+        
+        }
+
+        .about, .blog,.homeTitle2   {
+            margin-top: 2%;
+            margin-right:4%;
+            text-align: left;
+            display: grid;
+            font-family: "Montserrat", sans-serif;
+            margin-top: 30px;
+        
+            /* grid-template-columns: repeat(2, 1fr) */
+            
+        }
+
+        h1.homeTitle1, h1.homeTitle2 {
+            font-size: 30px;
+            font-weight: 450;
+        }
+        a.homeTitle2Button{
+            margin-right: 4%;
+            text-align: left;
+            display: grid;
+            background-color: #2b3942;
+            justify-content: center;
+            color: white;
+            border-radius: 50px;
+            text-decoration: none;
+            width: 70%;
+            
+            font-family: "Montserrat", sans-serif;    
+            margin-top: 0;
+            font-size: 10px;
+            padding: 1rem;
+            margin-bottom: 5%;
+            
+        }
+        a.homeTitle2Button:hover{
+            transition: all 0.2s ease-in-out;
+            font-family: "Montserrat", sans-serif;
+            color: #b6d5db;
+            border-radius : 50px;
+            width: 70%;
+            font-size: 11px;
+            text-decoration: none;
+        }
+        
+        a.homeTitle1Button{
+            margin-left: 26%;
+            text-align: right;
+            display: grid;
+            background-color: #2b3942;
+            width: 70%;
+            justify-content: center;
+            color: white;
+            border-radius: 50px;
+            text-decoration: none;
+            
+            font-family: "Montserrat", sans-serif;    
+            margin-top: 0;
+            font-size: 10px;
+            padding: 1rem;
+            margin-bottom: 5%;
+        
+            
+        }
+        a.homeTitle1Button:hover{
+            transition: all 0.2s ease-in-out;
+            font-family: "Montserrat", sans-serif;
+            color: #b6d5db;
+            border-radius : 50px;
+            font-size: 11px;
+            text-decoration: none;
+        
+        } 
+
+    
+  
+    
+  
+    }
